wmode='opaque' for the iframe YouTube video. Attempted fix to the problem Andi is experiencing where the timer box floats behind the YouTube iframe in an ugly manner.

--- a/app/assets/stylesheets/videos_new.css
+++ b/app/assets/stylesheets/videos_new.css
@@ -99,11 +99,12 @@
   left: -45px;
   top: 160px; }
 
-#timer {  width: 90px;
+#timer { width: 90px;
   height: 90px;
   border-radius: 45px;
   background-color: #0F82F5;
-  text-align: center; }
+  text-align: center;
+  z-index: 1; }
 
 #big-timer {  color: white;
   line-height: 88px; }
